[package]
name = "linkset"
version = "0.1.0"
edition = "2024"
license = "BSD 3-Clause"
readme = "./README.md"
repository = "https://github.com/pchampin/linkset_rs"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]

[lib]
name = "linkset"
path = "src/lib.rs"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sophia_bcp47 = { version = "0.9", path = "../sophia_rs/bcp47" }
sophia_iri = { version = "0.9", path = "../sophia_rs/iri", features = ["uri"] }
test-case = "3.3.1"
thiserror = "2"
winnow = "1"
